--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-stylus": "2.0.7",
     "lodash": "3.10.1",
     "mocha": "2.3.2",
+    "node-polyglot": "^1.0.0",
+    "os-locale": "^1.4.0",
     "semver": "5.0.3",
     "sinon": "1.16.1",
     "winston": "1.0.1"
